data/test/type_check/fail/issue_20e.v
wire x[3:0];
// Identical number of subscripts, but range where scalar is expected
assign x[2:0] = 1;
